samples/_failures_safe/1761267827_db2cdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eef2957b.c: In function ‘main’:
./samples/SAFE/__tmp_eef2957b.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
